# mana-machine

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  variables.cmake
source/: lib.cpp
src/: lib.cc  main.cc
test/: CMakeLists.txt
test/source/: mana-machine_test.cpp
test/src/: mana-machine_test.cc
